--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=car_rental_backend
-spring.datasource.url= ${DATASOURCE_URL}
+spring.datasource.url= ${MYSQL_URL}
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
-spring.datasource.username=${DATASOURCE_USER}
-spring.datasource.password=${DATASOURCE_PASSWORD}
+spring.datasource.username=root
+spring.datasource.password=${MYSQLPASSWORD}
 frontend.url = ${FRONTEND_URL}
 
 # JPA and Hibernate settings
