--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=car_rental_backend
-spring.datasource.url= ${MYSQL_URL}
+spring.datasource.url= mysql://root:GpkUjPGrZQgeNQMQcdQMBXkkTsWqnjzO@mysql.railway.internal:3306/railway
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=${MYSQLPASSWORD}
+spring.datasource.password=GpkUjPGrZQgeNQMQcdQMBXkkTsWqnjzO
 frontend.url = ${FRONTEND_URL}
 
 # JPA and Hibernate settings
