--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=car_rental_backend
-spring.datasource.url= jdbc:mysql://root:GpkUjPGrZQgeNQMQcdQMBXkkTsWqnjzO@mysql.railway.internal:3306/railway
+spring.datasource.url= {DATABASE_URL}
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=GpkUjPGrZQgeNQMQcdQMBXkkTsWqnjzO
