fixed driver url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,20 @@
-spring.application.name=car_rental_backend
+# Database URL (Full PostgreSQL connection string)
 spring.datasource.url=${DATABASE_URL}
-spring.datasource.driver-class-name=com.postgresql.cj.jdbc.Driver
+
+# Database username and password
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-frontend.url=${FRONTEND_URL}
+
+# Database driver class
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA and Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database=mysql
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Enable WebFlux CORS (cross-origin resource sharing)
 spring.webflux.cors.allowCredentials=true
 spring.webflux.cors.allowedOrigins=http://localhost:4200
 spring.webflux.cors.allowedMethods=GET,POST,PUT,DELETE,OPTIONS
