--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,16 @@
-# Database URL (Full PostgreSQL connection string)
+spring.application.name=car_rental_backend
 spring.datasource.url=${DATABASE_URL}
-
-# Database username and password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-
-# Database driver class
-spring.datasource.driver-class-name=org.postgresql.Driver
+frontend.url=${FRONTEND_URL}
 
 # JPA and Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-# Enable WebFlux CORS (cross-origin resource sharing)
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.webflux.cors.allowCredentials=true
 spring.webflux.cors.allowedOrigins=http://localhost:4200
 spring.webflux.cors.allowedMethods=GET,POST,PUT,DELETE,OPTIONS
